2008-09-14 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c, src/pic16/ralloc.c: use
	  SYM_SPIL_LOC/SPIL_LOC macros, no functional changes
	* src/pic16/ralloc.c (rematStr): reimplemented, fixes #1818857

2008-09-12 Borut Razem <borut.razem AT siol.net>

	* support/regression/fwk/testfwk.h:
	  define pdata as data for pic16 target
	  thanks Mauro Giachero

2008-09-11 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/bug-221100.c, support/regression/shifts.c,
          support/regression/absolute.c:
	  applied patch #2105615: Some PIC16 testcase fixlets
	  thanks Mauro Giachero

2008-09-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/gen.c (genCmpGt, genCmpLt): fixed bug 2094505
	* support/regression/tests/bug2094505.c: new, added

2008-09-07 Borut Razem <borut.razem AT siol.net>

	* src/SDCCglue.c, src/SDCCast.c:
	  fixed throw of "excess elements" warning for char arrays

2008-09-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/z80/aslist.c (lstsym): changed old K&R to ANSI
	* src/SDCCicode.c (geniCodeCritical): fixed bug for hc08
	* src/z80/gen.c (genCritical, genEndCritical): fixed bug 2077267
	* support/regression/tests/bug2077267.c: new, added

2008-09-05 Raphael Neider <rneider AT web.de>

	* configure.in, Makefile.common.in: add support for ccache,
	  remove spurious $VERSION output, detect doc-tools even without
	  --enable-doc to facilitate later manual doc-builds, minor cleanup
	* configure: regenerated

	* doc/Makefile.in: quieten pdflatex, makeindex, and latex2html,
	  avoid races in parallel VPATH builds
	* doc/clean.mk: remove .lyx files in the builddir for VPATH builds
	* doc/sdccman.lyx: mention --without-ccache configure option

2008-09-01 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_derefPtr): handle CPOINTERs as well
	* (genConstPointerGet): fix reading bitfields from __code space
	* src/pic16/glue.c (pic16_printIvalBitFields): correctly mask